--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,5 +13,7 @@ collections:
     fields:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Header', name: 'header', widget: 'string' }
+      - { label: 'Excerpt', name: 'post_excerpt', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
