--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,5 +15,6 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Header', name: 'header', widget: 'string' }
       - { label: 'Excerpt', name: 'post_excerpt', widget: 'string' }
+      - { label: 'Thumbnail', name: 'thumbnail', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
